Fix logo vertical align and text horizontal align

--- a/styles/kite-tour.less
+++ b/styles/kite-tour.less
@@ -19,6 +19,15 @@ kite-tour {
   h5 {
     font-size: 1.2em;
     margin-top: @double-padding;
+
+    kite-logo {
+      margin-right: @component-padding;
+    }
+
+    span, kite-logo {
+      display: inline-block;
+      vertical-align: middle;
+    }
   }
 
   kite-logo svg {
@@ -66,6 +75,10 @@ kite-tour {
 
     p {
       text-align: center;
+    }
+
+    section p {
+      text-align: left;
     }
   }
 
